style(lib): reformat release-it configuration and scripts
- added proper formatting to `after:*` hooks in `.release-it.json` for improved readability
- removed redundant `postbuild` script from `package.json` as `after:bump` now handles the build step
- enabled `autoGenerate` in `github.release` for a streamlined release workflow

--- a/packages/lib/.release-it.json
+++ b/packages/lib/.release-it.json
@@ -3,12 +3,19 @@
     "requireCleanWorkingDir": false
   },
   "hooks": {
-    "after:init": ["t2k"],
-    "after:bump": ["yarn run build"],
-    "after:release": ["yarn pkg get name | cnpm sync"]
+    "after:init": [
+      "t2k"
+    ],
+    "after:bump": [
+      "yarn run build"
+    ],
+    "after:release": [
+      "yarn pkg get name | cnpm sync"
+    ]
   },
   "github": {
     "release": true,
+    "autoGenerate": true,
     "proxy": "http://127.0.0.1:9090"
   }
 }
