feat(lib): configure release-it for automated changelogging and publishing
- add .claude/settings.local.json to allow yarn add commands in Claude
- configure release-it with conventional-changelog plugin, git commit message format, and npm publishing
- update peerDependencies and add necessary changelog dependencies to package.json
- automate GitHub release naming and changelog generation based on conventional commit format

--- a/packages/lib/.release-it.json
+++ b/packages/lib/.release-it.json
@@ -1,11 +1,13 @@
 {
   "git": {
-    "requireCleanWorkingDir": false
+    "requireCleanWorkingDir": false,
+    "commitMessage": "chore(release): ${version}",
+    "tagName": "v${version}"
+  },
+  "npm": {
+    "publish": true
   },
   "hooks": {
-    "after:init": [
-      "t2k"
-    ],
     "after:bump": [
       "yarn run build"
     ],
@@ -13,9 +15,59 @@
       "yarn pkg get name | cnpm sync"
     ]
   },
+  "plugins": {
+    "@release-it/conventional-changelog": {
+      "infile": "CHANGELOG.md",
+      "preset": {
+        "name": "conventionalcommits",
+        "types": [
+          {
+            "type": "feat",
+            "section": "✨ Features"
+          },
+          {
+            "type": "fix",
+            "section": "🐛 Bug Fixes"
+          },
+          {
+            "type": "chore",
+            "hidden": true
+          },
+          {
+            "type": "docs",
+            "section": "📝 Documentation"
+          },
+          {
+            "type": "style",
+            "hidden": true
+          },
+          {
+            "type": "refactor",
+            "section": "♻️ Code Refactoring"
+          },
+          {
+            "type": "perf",
+            "section": "⚡ Performance Improvements"
+          },
+          {
+            "type": "test",
+            "hidden": true
+          },
+          {
+            "type": "build",
+            "hidden": true
+          },
+          {
+            "type": "ci",
+            "hidden": true
+          }
+        ]
+      }
+    }
+  },
   "github": {
     "release": true,
-    "autoGenerate": true,
+    "releaseName": "${version}",
     "proxy": "http://127.0.0.1:9090"
   }
 }
