--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -16,11 +16,14 @@
     "release": "release-it"
   },
   "devDependencies": {
+    "@release-it/conventional-changelog": "^10.0.4",
     "@swc/core": "^1.3.93",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "autoprefixer": "^10.4.16",
     "classnames": "^2.5.1",
+    "conventional-changelog": "^7.1.1",
+    "conventional-commits-parser": "^6.2.1",
     "cssnano": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,9 +31,9 @@
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
+    "classnames": "*",
     "react": "*",
-    "react-dom": "*",
-    "classnames": "*"
+    "react-dom": "*"
   },
   "publishConfig": {
     "access": "public",
