--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -27,6 +27,7 @@
     "cssnano": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "release-it": "^19.2.3",
     "tsup": "^8.2.4",
     "typescript": "^5.2.2"
   },
