chore(package): rename package from @jswork/react-render-controls
- Updated the package name from `@jswork/react-render-controls` to `react-render-controls`
- This change affects the primary identifier in package.json
- Aligns the package naming with the new distribution strategy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jswork/react-render-controls",
+  "name": "react-render-controls",
   "version": "1.0.0",
   "description": "A lightweight, headless React component library for declarative conditional rendering, pattern matching, and list mapping. SSR-friendly, zero UI, and fully type-safe.",
   "homepage": "https://js.work",
